after bug complete in my project

--- a/templates/custom_admin/productmanagement.html
+++ b/templates/custom_admin/productmanagement.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <a href="{% url 'custom_admin:products_view' %}" class="box">Product</a>
-        <a href="{% url 'custom_admin:variant_list' %}" class="box">Productvarient</a>
+        {% comment %} <a href="{% url 'custom_admin:variant_list' %}" class="box">Productvarient</a> {% endcomment %}
         
 
         
