--- a/templates/custom_admin/signin.html
+++ b/templates/custom_admin/signin.html
@@ -142,12 +142,12 @@ body {
                     <input type="password" name="password" required>
                     <label>Password</label>
                 </div>
-                <div class="options">
+                {% comment %} <div class="options">
                     <label>
                         <input type="checkbox" name="remember_me"> Remember Me
                     </label>
                     <a href="" class="forgot-password">Forgot Password?</a>
-                </div>
+                </div> {% endcomment %}
                 <button type="submit" class="btn">Sign In</button>
             </form>
         </div>
