--- a/templates/user/checkoutpage.html
+++ b/templates/user/checkoutpage.html
@@ -100,7 +100,7 @@
     <div class="error-screen">
         <h2>Oops! Some products in your cart are from inactive categories.</h2>
         <p>Please remove them before proceeding to checkout.</p>
-        <a href="{% url 'cart_page' %}">
+        <a href="{% url 'cart' %}">
             <button>Go to Cart</button>
         </a>
     </div>
