--- a/templates/custom_admin/add_category.html
+++ b/templates/custom_admin/add_category.html
@@ -47,6 +47,18 @@
         <div class="card-header bg-info text-white">
             <h4><strong>Category Details</strong></h4>
         </div>
+
+        {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+            
         <div class="card-body">
             <!-- The Form Start -->
             <form method="post">
