--- a/templates/custom_admin/edit_category.html
+++ b/templates/custom_admin/edit_category.html
@@ -4,6 +4,18 @@
 <div class="container mt-4">
     <h2 class="text-center mb-4">Edit Category</h2>
 
+     {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'error' %}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+
+
     <form method="post" class="border p-4 rounded shadow-sm bg-light">
         {% csrf_token %}
         
